# clara

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  LANGUAGE.md  README.md  __init__.py  agent.py  catalog-info.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
agents/: __init__.py  agent.py  studyplan_agent.py
k8s/: README-SECRETS.md  configmap.yaml  deployment.yaml  ingress.yaml  seal-secret.sh  secret-sealed.yaml  secret.yaml  service.yaml
tools/: __init__.py  studyplan_agent_tools.py
